--- a/style.css
+++ b/style.css
@@ -125,3 +125,10 @@ section h4{
     border:2px solid red;
     padding:20px;
 }
+.you{
+    padding:4px 6px;
+    margin:0 10px 0 0;
+    border-radius: 5px;
+    background-color: var(--Moderate-blue);
+    color:var(--White);
+}
