--- a/style.css
+++ b/style.css
@@ -143,11 +143,27 @@ section h4{
 .menu .deletebox h4{
     color:var(--Soft-Red)
 }
+.editBox{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+}
+.update{
+    padding:15px 0;
+    max-width: 100%;
+    width:30%;
+    font-size: 17px;
+    background-color: var(--Moderate-blue);
+    color: var(--White);
+    border-radius: 5px;
+    margin:10px 0 0;
+}
 .modal{
     display: none;
     width:100%;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     top:0;
     background-color:rgba(0, 0, 0, 0.204);
 }
