--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@ section h4{
     margin:10px 0px;
     border:1px solid black;
     border-radius: 5px;
+    padding:10px;
 }
 .commentBox img{
     position: absolute;
@@ -246,6 +247,11 @@ section h4{
     position: absolute;
     bottom:40px;
     right:16px;
+}
+@media screen and (min-width:400px) {
+    .commentBox img{
+        width:10%;
+    }
 }
 @media screen and (min-width:700px) {
     .subContainer{
