--- a/style.css
+++ b/style.css
@@ -268,6 +268,9 @@ section h4{
     .modal-content{
         width:50%;
     }
+    header img{
+        width:8%;
+    }
 }
 @media screen and (min-width:1000px) {
     .commentBox{
@@ -287,5 +290,8 @@ section h4{
         position: relative;
         top:0;
         width:15%;
+    }
+    header img{
+        width:5%;
     }
 }
